<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tribal_with_overlay"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rualingo_logo"
        android:src="@drawable/rualingo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/taglineText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/the_free_fun_and_effective_way_to_learn_a_language"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:lineSpacingMultiplier="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <!-- GET STARTED BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        style="@style/DuolingoButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:backgroundTint="@color/ui_orange_main"
        app:strokeColor="@color/ui_orange_dark"
        app:strokeWidth="4dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <!-- ALREADY HAVE ACCOUNT BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/DuolingoButton.Black"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="60dp"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/white"
        app:backgroundTint="@color/ui_red_main"
        app:strokeColor="@color/ui_red_dark"
        app:strokeWidth="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/connecting"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>